--- a/contact.css
+++ b/contact.css
@@ -1,8 +1,8 @@
 
 
 body{
-    background: url('img2.jpg') no-repeat;
-    background-size: 100% 107.2%;
+    background: black;
+    color: blanchedalmond;
     min-height: 100vh;
     align-items: center;
     display: flex;
