--- a/contact.css
+++ b/contact.css
@@ -1,7 +1,7 @@
 
 
 body{
-    background: black;
+    background: white;
     color: blanchedalmond;
     min-height: 100vh;
     align-items: center;
