--- a/contact.css
+++ b/contact.css
@@ -21,7 +21,11 @@ body{
 }
 
 h3 {
-    font-size: 15px;
+    font-size: 16px;
+}
+
+h5 {
+    font-size: 17px;
 }
 
 h3 span{
@@ -59,5 +63,3 @@ h4 {
 .btn:hover{
     color: aqua;
 }
-
-
